[package]
name = "loom-native-melior"
version = "0.1.0"
edition = "2021"
description = "Optional verifier-gated melior/LLVM/JIT backend boundary for Loom Phase 16"

[features]
default = []
melior = ["dep:melior"]

[dependencies]
arrow-schema = { workspace = true }
loom-core = { path = "../loom-core" }
melior = { version = "=0.27.0", optional = true }
