[package]
name = "loom-native-melior"
version = "0.1.0"
edition = "2021"
description = "Optional verifier-gated melior/LLVM/JIT backend boundary for Loom Phase 16"

[features]
default = []
melior = ["dep:melior"]

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
loom-ffi = { path = "../loom-ffi" }
melior = { version = "=0.27.0", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
