[package]
name = "loom-parquet-ingress"
version = "0.1.0"
edition = "2021"
description = "Isolated local Parquet file ingress adapter for Loom"

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
base64 = "0.22.1"
loom-ir-core = { path = "../../crates/loom-ir-core" }
loom-source-ingress = { path = "../loom-source-ingress" }
parquet = { workspace = true }

[dev-dependencies]
loom-ffi = { path = "../../crates/loom-ffi", default-features = false }
tempfile = { workspace = true }
