[package]
name = "loom-sidecar-ffi"
version = "0.1.0"
edition = "2021"
description = "Lean sidecar FFI staticlib — sidecar extract/verify/routing C ABI surface with zero container dependency"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
loom-ir-core = { path = "../loom-ir-core" }
loom-parquet-ingress = { path = "../../ingress/loom-parquet-ingress" }
parquet = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }
