[package]
name = "loom-self-ingress"
version = "0.1.0"
edition = "2021"
description = "Single IO boundary for Loom native .loom file format — delegates all format logic to loom-container-legacy"

[dependencies]
loom-container-legacy = { path = "../../contrib/loom-container" }
arrow = { workspace = true }
